# secret-leak-sentinel

./: .env.example  .gitignore  .slsignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  secret_leak_sentinel_cli.py  structlog.py
alerting/: webhook_alerts.py
classifiers/: context_analyzer.py  criticality_classifier.py  cross_file_correlation.py  verification.py
cli/: commands.py  generate_report.py  main.py
detectors/: baseline_tracker.py  cloud_credential_detector.py  entropy_detector.py  env_file_scanner.py  finding_deduplicator.py  pattern_registry.py  regex_detector.py  suppression.py
docs/: ci-filtering-by-secret-type.md  detection-methodology.md  overview.md  policies.md
hooks/: pre_commit_hook.py
policies/: default_policy.yaml
reports/: csv_report.py  generator.py  html_report.py  json_exporter.py  redaction.py  report_generator.py  sarif_report.py  serializer.py
scanners/: ci_artifact_scanner.py  entropy_scanner.py  filesystem_scanner.py  git_history_scanner.py  git_scanner.py  patch_scanner.py  secret_scanner.py
schemas/: finding.py  finding_schema.py
scripts/: github_action_entrypoint.py
tests/: test_action_metadata.py  test_baseline_tracker.py  test_ci_artifact_scanner.py  test_cli_exit_policy.py  test_cli_git_history.py  test_cli_scan_file.py  test_cli_scan_output_file.py  test_cli_scan_path.py  test_cli_version.py  test_cloud_credential_detector.py  test_criticality_classifier.py  test_cross_file_correlation.py  test_dotenv_assignment_detector.py  test_entropy_detector.py  test_entropy_scanner.py  test_env_file_scanner.py  test_exclude_rule_id_cli.py  test_exit_code_threshold.py  test_fail_on_detector_cli.py  test_filesystem_scanner.py  test_finding_deduplicator.py  test_finding_schema.py  test_git_history_scanner.py  test_git_scanner.py  test_github_action_entrypoint.py  test_hook_scripts.py  (+18 more)
(+15 files in other folders)
